fix index and current games not getting css, made css on mobile better

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -233,6 +233,17 @@ body.dark-mode {
 
   
 @media only screen and (max-width: 600px) {
+    header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-size: 1.45em;
+        font-family: 'Staatliches', sans-serif;
+        margin: 0;
+        height: 40px;
+        width: 90vw;
+    }
+
     #wordGrid {
         margin-top: auto;
         margin: auto;
@@ -245,7 +256,7 @@ body.dark-mode {
         align-items: center;
         align-content: center;
         text-align: center;
-        font-size: 1.0em;
+        font-size: 0.75em;
     }
     .navWrapper input[type="text"] {
         display: inline-block;
